plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'org.flywaydb.flyway' version '9.22.3'
}

def flywayVersion = '9.22.3'

group = 'com.difbriy'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    flywayMigration
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/snapshot' }
}


dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
   // implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // Spring Cache + Redis
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // WebSocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // Security & Templates
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

    // Database
    implementation 'org.postgresql:postgresql'

    //FLYWAY
    implementation "org.flywaydb:flyway-core:${flywayVersion}"


    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // HTTP & JSON
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    implementation 'org.json:json:20240303'

    // External API
    implementation 'io.github.wuhewuhe:bybit-java-api:1.2.7'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //MAIL
    implementation("org.springframework.boot:spring-boot-starter-mail")

    //actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    flywayMigration 'org.postgresql:postgresql:42.7.3'

    //mapping
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

    //oauth2
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

}

flyway {
    url = 'jdbc:postgresql://localhost:5432/difbri_db'
    user = 'postgres'
    password = '4242'
    locations = ['classpath:db/migration']
    schemas = ['public']
    configurations = ['flywayMigration', 'runtimeClasspath', 'compileClasspath']
    driver = 'org.postgresql.Driver'
    cleanDisabled = false
    outOfOrder = true
    ignoreMigrationPatterns = ['*:ignored']
    baselineVersion = '1'
    baselineDescription = 'Initial schema'
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs = [
        '--enable-native-access=ALL-UNNAMED',
        '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
        '--add-opens=java.base/java.io=ALL-UNNAMED',
        '--add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED'
    ]
}

tasks.named('bootRun') {
    jvmArgs = [
        '--enable-native-access=ALL-UNNAMED',
        '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
        '--add-opens=java.base/java.io=ALL-UNNAMED',
        '--add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED'
    ]
}

tasks.withType(JavaExec).configureEach {
    jvmArgs = [
        '--enable-native-access=ALL-UNNAMED',
        '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
        '--add-opens=java.base/java.io=ALL-UNNAMED',
        '--add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED'
    ]
}